@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Scanner;
 
@@ -14,11 +15,13 @@ import java.util.Scanner;
 public class Solution {
     public static void main(String[] args) throws IOException {
         Scanner scanner = new Scanner(System.in);
-        String source1 = scanner.nextLine();
-        String source2 = scanner.nextLine();
+        String pathOne = scanner.nextLine();
+        String pathTwo = scanner.nextLine();
 
-        try (InputStream inputStream = Files.newInputStream(Paths.get(source1))) {
-        }
+        InputStream inputStream = Files.newInputStream(Path.of(pathOne));
+
+        byte[] allBytes = inputStream.readAllBytes();
+        
     }
 }
 
